# moodle-export-archive

./: .gitignore  Cargo.toml  README.md
src/: kopps.rs  main.rs  schema.rs
templates/: data.rs.xml
