[package]
name = "moodle-export-archive"
version = "0.1.1"
authors = ["Rasmus Kaj <kaj@kth.se>"]
edition = "2018"
build = "src/build.rs"

[build-dependencies]
ructe = "0.7.4"

[dependencies]
chrono = "0.4.9"
diesel = { version = "1.4.0", features = ["chrono", "postgres", "64-column-tables"] }
dotenv = "0.15"
slug = "0.1.4"
